Added sharpen filter bug fix in memory handling

--- a/Qt/ImageViewer/imageviewer.ui
+++ b/Qt/ImageViewer/imageviewer.ui
@@ -49,6 +49,7 @@
     <addaction name="actionEqualization"/>
     <addaction name="actionInverte"/>
     <addaction name="actionLinear_Filter"/>
+    <addaction name="actionSharpen"/>
    </widget>
    <addaction name="menuFile"/>
    <addaction name="menuView"/>
@@ -178,6 +179,14 @@
    </property>
    <property name="text">
     <string>Linear Filter</string>
+   </property>
+  </action>
+  <action name="actionSharpen">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
+   <property name="text">
+    <string>Sharpen</string>
    </property>
   </action>
  </widget>
